# leem

./: Makefile  README.md  pyproject.toml
examples/: run_tiny_train.py  run_transformer_train.py
leem/: train.py
leem/data/: dataset.py  example.py  msmarco.py
leem/eval/: metrics.py  triplet_accuracy.py
leem/loss/: base.py  contrastive_loss.py  triplet_loss.py
leem/model/: base.py  sentence_transformer.py  transformer.py
leem/similarity/: base.py  cos.py
leem/trainer/: trainer.py
tests/similarity/: test_cos.py
tests/trainer/: test_trainer.py
